force-app/main/default/objects/Self_Service_Dealer_Codes__c/Self_Service_Dealer_Codes__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Self Service Dealer Codes</label>
</CustomObject>