force-app/main/default/objects/Self_Service_Dealer_Codes__c/fields/DTV_NFFL__c.field-meta.xml
<CustomField>
    <fullName>DTV_NFFL__c</fullName>
    <description>Dealer code used for DTV NFFL provider for all users through Self Service - [PER-2751]</description>
    <label>DTV NFFL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>