force-app/main/default/objects/Self_Service_Dealer_Codes__c/fields/Frontier__c.field-meta.xml
<CustomField>
    <fullName>Frontier__c</fullName>
    <description>Dealer code used for Frontier provider for all users through Self Service - [PER-2751]</description>
    <label>Frontier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>