force-app/main/default/objects/Self_Service_Dealer_Codes__c/fields/Viasat__c.field-meta.xml
<CustomField>
    <fullName>Viasat__c</fullName>
    <description>Dealer code used for Viasat provider for all users through Self Service - [PER-2751]</description>
    <label>Viasat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>